<resources>
    <string name="app_name">安管平台</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">设备监控</string>
    <string name="title_notifications">告警</string>
    <string name="title_reportPoliceLog">日志</string>
    <string name="title_myPage">我的</string>

    <string name="fragment_home_tacit_txt">个</string>

    <!-- 日期选择器相关 -->
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="cancel">取消</string>
</resources>
