<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_deviceMonitoring"
        android:icon="@drawable/ic_layers_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_reportPolice"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_reportPoliceLog"
        android:icon="@drawable/ic_local_library_black_24dp"
        android:title="@string/title_reportPoliceLog" />

    <item
        android:id="@+id/navigation_myPage"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_myPage" />

</menu>
